Fix 1st Line Jumping Around When Second is Populated

--- a/style.css
+++ b/style.css
@@ -1,6 +1,5 @@
 body{
     font-family: 'Courier New', Courier, monospace;
-    font-size: 4em;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -10,11 +9,12 @@ body{
 
 .display {
     background-color: gray;
-    height: 2em;
+    font-size: 2em;
+    height: 3em;
     width: 500px;
     display: flex;
     flex-direction: column;
-    justify-content: space-around;
+    justify-content: space-between;
     padding: 10px;
     background-color: #dae6d2;
     color: #000000;
